<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".ui.perfil.PerfilFragment">

    <TextView
        android:id="@+id/tvPerfil"
        android:layout_width="165dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:text="@string/perfil"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textColorLink="@color/colorPrimary"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etCodigo"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:allowUndo="false"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/codigo"
        android:importantForAutofill="no"
        android:inputType="number"
        android:selectAllOnFocus="false"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPerfil"
        tools:ignore="Deprecated,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck,TextContrastCheck"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/etDni"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/dni"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCodigo"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:layout_marginTop="96dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/nombreProp"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCodigo"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/etApellido"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/apellidoProp"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombre"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,TextContrastCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/etMail"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/e_mailProp"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etApellido"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/etContrasenia"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/contrasenia_prop"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btEditar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMail"
        app:layout_constraintVertical_bias="0.132"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,TextContrastCheck" />

    <Button
        android:id="@+id/btEditar"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="227dp"
        android:layout_height="70dp"
        android:layout_marginBottom="68dp"
        android:hint="@string/editar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateClickableBoundsCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/telefonoProp"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btEditar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etContrasenia"
        app:layout_constraintVertical_bias="0.736"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    <ImageView
        android:id="@+id/ivAvatarPerfil"
        android:layout_width="130dp"
        android:layout_height="125dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="39dp"
        android:contentDescription="@string/avatar"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toTopOf="@+id/etNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/btGuardar"
        android:layout_width="227dp"
        android:layout_height="70dp"
        android:hint="@string/guardar"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTelefono"
        app:layout_constraintVertical_bias="0.418"
        tools:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>