<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llContratoDetalle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp"
    tools:context=".ui.inmuebles.DetalleInmuebleFragment">

    <LinearLayout
        android:id="@+id/LLTitulo"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:layout_weight="2"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/informac_on_del_inmueble"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="italic"
            tools:ignore="NestedWeights" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="405dp"
        android:layout_weight="6"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:layout_weight="0"
            android:orientation="horizontal"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/tvDireccion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:textAlignment="textStart"
                android:textSize="20sp"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/tvPrecio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:textSize="20sp"
                tools:ignore="NestedWeights" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:gravity="fill_vertical">

            <TextView
                android:id="@+id/tvCodigo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:textSize="20sp"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/tvAmbientes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:textSize="20sp"
                tools:ignore="NestedWeights" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:gravity="fill_vertical">

            <TextView
                android:id="@+id/tvUso"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:textSize="20sp"
                tools:ignore="NestedWeights" />

            <CheckBox
                android:id="@+id/cbDisponible"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:text="@string/disponible"
                android:textAlignment="textStart"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:gravity="fill_vertical">

            <TextView
                android:id="@+id/tvTipo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:textSize="20sp"
                tools:ignore="NestedWeights" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="212dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivInmuebleDetalle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:contentDescription="@string/imuebledetalle"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:src="@drawable/ic_launcher_foreground"
            tools:ignore="ImageContrastCheck,NestedWeights" />
    </LinearLayout>

</LinearLayout>